# Guardy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
app/: main.py
guardy/: __init__.py  analyzer.py  config.py
guardy/adapters/: __init__.py  base.py  disk.py  mongodb.py
guardy/encryption/: __init__.py  aes_cipher.py
guardy/engines/: __init__.py
guardy/inspection/: __init__.py  protocol.py  structure_parser.py  zip_bomb.py
guardy/models/: anomaly_model.pkl
guardy/threat/: __init__.py  ai_anomaly.py  hash_generator.py
guardy/threat/ml/: __init__.py  byte_preprocessor.py  config.py  dataset_loader.py  predict.py  requirements.txt  train_anomaly_model.py  train_byte_cnn.py
guardy/ui/: __init__.py  dashboard.py  report.py
guardy/ui/templates/: dashboard.html  index.html  user_detail.html
guardy/validation/: __init__.py  mime_checker.py  polyglot.py  signature.py
test_server/: docker-compose.yml  main.py  populate_ui.py  test_config.py
test_server/storage/safe/: a86fe98c56c848e2bfcec9d1679aa920_hello_world.txt
tests/: test_upload.py
